# nba-analytics

./: .gitignore  9cat_parameters.txt  assists_kings.ipynb  bbm_html.html  caruso_2023-10-10.xlsx  distributions.ipynb  download_player_imgs.ipynb  download_team_logo.ipynb  finals_preview.ipynb  haliburton_ratio.ipynb  isolation.ipynb  jimmy_ppg_carrer.ipynb  jimmy_range.ipynb  keeper_players.txt  kmeans_demo.ipynb  miami_shooting.ipynb  mvp_reg_vs_playoff.ipynb  nop_duo.ipynb  on_off.ipynb  player_rating.ipynb  playoff_scorers.ipynb  position_value.ipynb  pyproject.toml  requirements.txt  short_chart.ipynb  team_offense.ipynb  visualize_players.ipynb  wendy_hype.ipynb
2022-23/: miami_shooting.ipynb  radnom_notebook.ipynb  scorers.ipynb  shot_profile.ipynb
2023-24/: champion_predictions.csv  champions.csv  correlation.html  grid_search_results.pkl  haliburton_ratio.ipynb  historical_relative_data.csv  playoff_prediction.ipynb  team_offense.ipynb  turnovers.ipynb
2024-25/: coaches_win_perc.ipynb  curry_flurry.ipynb  estimated_wins.csv  fired_coaches.csv  missing_players.xlsx  player_salaries.csv  production_value.ipynb  production_value_difference.xlsx  rookies_2024.json  rookies_gamescore.ipynb  rookies_gamescore.xlsx  steph_stats_game_2022-2024.csv  steph_stats_per_quarter_2022-2024.csv
Excels/: caruso_2023-10-11.xlsx  caruso_2023-10-13.xlsx  caruso_2023-10-16.xlsx
Fantasy/: distributions.ipynb  load_bbm_projections.ipynb  player_std_dev.ipynb
all_time/: bruno_ast.ipynb  finals_mvps.ipynb
fantasy/: correlation.ipynb  fantasy_rank_vs_adp.ipynb
(+154 files in other folders)
