[tool.poetry]
name = "nba-analytics"
version = "0.1.0"
description = ""
authors = ["Fran Huzjan <fran.huzjan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fuzzywuzzy = "^0.18.0"
catboost = "^1.2.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
