[tool.poetry]
name = "nba-analytics"
version = "0.1.0"
description = ""
authors = ["Fran Huzjan <fran.huzjan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fuzzywuzzy = "^0.18.0"
catboost = "^1.2.8"
pandas = "^2.2.3"
numpy = "^2.2.5"
scikit-learn = "^1.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
